--- a/contracts/cw-template-minimal/Cargo.toml
+++ b/contracts/cw-template-minimal/Cargo.toml
@@ -1,24 +1,15 @@
 [package]
 name = "cw-template-minimal"
-version = "0.1.0"
-authors = ["srdtrk <srdtrk@hotmail.com>"]
-edition = "2021"
+description = "Minimal template for CosmWasm contracts"
+version = { workspace = true }
+authors = { workspace = true }
+edition = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [lib]
 crate-type = ["cdylib", "rlib"]
-
-[profile.release]
-opt-level = 3
-debug = false
-rpath = false
-lto = true
-debug-assertions = false
-codegen-units = 1
-panic = 'abort'
-incremental = false
-overflow-checks = true
 
 [features]
 # for more explicit tests, cargo test --features=backtraces
@@ -26,25 +17,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
-[package.metadata.scripts]
-optimize = """docker run --rm -v "$(pwd)":/code \
-  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
-  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
-  cosmwasm/optimizer:0.15.0
-"""
-
 [dependencies]
-cosmwasm-schema = "1.5.0"
-cosmwasm-std = { version = "1.5.0", features = [
-    "cosmwasm_1_3",
-    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
-    # "cosmwasm_1_4",
-] }
-cw-storage-plus = "1.1.0"
-cw2 = "1.1.1"
-schemars = "0.8.15"
-serde = { version = "1.0.189", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.49" }
-
-[dev-dependencies]
-cw-multi-test = "0.17.0"
+cosmwasm-schema = { workspace = true }
+cosmwasm-std = { workspace = true }
+cw-storage-plus = { workspace = true }
+cw2 = { workspace = true }
+schemars = { workspace = true }
+serde = { workspace = true }
+thiserror = { workspace = true }
